<resources>
    <string name="app_name">MyRuns 6 E</string>

    <!-- Somehow required for th Google Maps fragment...
   also required: see google_maps_api.xml  -->
    <string name="google_app_id">1013537599759</string>

    <!-- Menu options for the "action bar" : -->
    <string name="menu_option_settings">Settings</string>

    <!-- Names of the tabs in the main screen : -->
    <!-- Note: these are hard-coded in TabsManager -->

    <string name="start_tab_start_button_label">Start</string>
    <string name="start_tab_sync_button_label">Sync</string>

    <!-- History tab: -->

    <!-- Settings tab: (preferences fragment) -->
    <string name="settings_tab_preferences_label">Account Preferences</string>
    <string name="settings_tab_name_email_class">Name, Email, Class, etc</string>
    <string name="settings_tab_user_profile">User Profile</string>
    <string name="settings_tab_privacy_setting">Privacy Setting</string>
    <string name="settings_tab_privacy_setting_details">Posting your records anonymously</string>

    <string name="settings_tab_additional_settings_label">Additional Settings</string>
    <string name="settings_tab_unit_preference">Unit Preference</string>
    <string name="settings_tab_unit_preference_details">Select the units</string>

    <string name="settings_tab_comments">Comments</string>
    <string name="settings_tab_comments_details">Please enter your comments</string>

    <string name="settings_tab_misc_label">Misc.</string>
    <string name="settings_tab_webpage">Webpage</string>
    <string name="settings_tab_webpage_url_normal">http://web.cs.dartmouth.edu/</string>
    <string name="settings_tab_webpage_url_trump">https://secure.donaldjtrump.com/donate/</string>

    <!-- Map activity: -->
    <string name="map_save_button_text">Save</string>
    <string name="map_cancel_button_text">Cancel</string>

    <!-- Manual Entry activity:: -->
    <string name="manual_entry_duration_prompt">Duration</string>
    <string name="manual_entry_distance_prompt">Distance</string>
    <string name="manual_entry_calories_prompt">Calories</string>
    <string name="manual_entry_heart_rate_prompt">Heart Rate</string>
    <string name="manual_entry_comment_prompt">Comment</string>
    <string name="manual_entry_comment_hint">How did it go? Notes here.</string>


    <!-- from MyRuns1 : -->
    <string name="action_settings">Settings</string>

    <string name="profile_photo_label">Profile Photo:</string>
    <string name="change_profile_button_text">change</string>
    <string name="name_field_label">Name</string>
    <string name="email_field_label">Email</string>
    <string name="namehint">Your Name</string>
    <string name="emailhint">Your Email</string>
    <string name="phone_label">Phone</string>
    <string name="phone_hint">Your Phone Number</string>
    <string name="gender_label">Gender</string>
    <string name="gender_option_male">Male</string>
    <string name="gender_option_female">Female</string>

    <string name="class_label">Class</string>
    <string name="class_hint">eg. 2012</string>
    <string name="major_label">Major</string>
    <string name="major_hint">Your Major</string>
    <string name="save_btn_label">save</string>
    <string name="cancel_btn_label">cancel</string>

    <string name="profile_photo_file_name">profile_photo_EMHruns.png</string>

    <string name="save_message_text">Saved</string>


</resources>
