<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".DisplayEntryActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Input Type" />

        <EditText
            android:id="@+id/display_entry_input_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Activity Type" />

        <EditText
            android:id="@+id/display_entry_activity_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Date and time" />

        <EditText
            android:id="@+id/display_entry_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual_entry_duration_prompt" />

        <EditText
            android:id="@+id/display_entry_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual_entry_distance_prompt" />

        <EditText
            android:id="@+id/display_entry_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual_entry_calories_prompt" />

        <EditText
            android:id="@+id/display_entry_calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual_entry_heart_rate_prompt" />

        <EditText
            android:id="@+id/display_entry_heart_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual_entry_comment_prompt" />

        <EditText
            android:id="@+id/display_entry_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false" />

    </LinearLayout>
</ScrollView>

